Some extra fixes - Fixed alignment of first letter in instance state popover - Fixed HSM nav icon visibility for unregister - Make an info call for HSM service instances in user service instance list - Fixed a few Helion Service Manager references - For the HSM details screen show just 'Service Manager' for the name. This aligns how we handle the same breadcrumb/name in the CF endpoints pages  (HCF/Clusters - HSM/Service Manager) - Fixed an issue where disconnected a HSM would not change the total upgrade number (if there are two registered)

--- a/framework/theme/scss/style/utils.scss
+++ b/framework/theme/scss/style/utils.scss
@@ -1,6 +1,7 @@
 .first-letter-uppercase {
   text-transform: lowercase;
 }
-.first-letter-uppercase:first-letter {
+
+.first-letter-uppercase *:first-letter {
   text-transform: uppercase;
 }
